--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,7 +13,7 @@
         android:id="@+id/buttonInGoogleLogin"
         android:layout_width="347dp"
         android:layout_height="64dp"
-        android:layout_marginBottom="116dp"
+        android:layout_marginBottom="76dp"
         android:backgroundTint="@color/whiteInputs"
         android:fontFamily="serif"
         android:paddingLeft="10dp"
@@ -29,7 +29,6 @@
         app:iconTint="@null"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_editor_absoluteX="105dp"
         app:layout_editor_absoluteY="348dp"
@@ -40,8 +39,8 @@
         android:id="@+id/textRegisterLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="64dp"
-        android:layout_marginBottom="76dp"
+        android:layout_marginEnd="44dp"
+        android:layout_marginBottom="36dp"
         android:fontFamily="serif"
         android:text="@string/textRegisterHome"
         android:textColor="@color/green"
@@ -53,8 +52,8 @@
         android:id="@+id/textNoCountLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="76dp"
-        android:layout_marginBottom="76dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginBottom="36dp"
         android:fontFamily="serif"
         android:text="@string/noCountLogin"
         android:textColor="@color/black"
@@ -64,8 +63,8 @@
 
     <TextView
         android:id="@+id/textNameAppLogin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="249dp"
+        android:layout_height="48dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="128dp"
         android:layout_marginEnd="24dp"
@@ -73,7 +72,7 @@
         android:text="@string/appName"
         android:textAlignment="center"
         android:textColor="@color/green"
-        android:textSize="34sp"
+        android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -117,28 +116,30 @@
 
     <ImageView
         android:id="@+id/iconCountLogin"
-        android:layout_width="88dp"
-        android:layout_height="70dp"
+        android:layout_width="60dp"
+        android:layout_height="56dp"
         android:layout_marginEnd="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/etUsernameLogin"
-        app:layout_constraintHorizontal_bias="0.592"
+        app:layout_constraintHorizontal_bias="0.581"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.405"
+        app:layout_constraintVertical_bias="0.441"
         app:srcCompat="@drawable/icon_user" />
 
     <ImageView
         android:id="@+id/iconKeyLogin"
-        android:layout_width="78dp"
-        android:layout_height="66dp"
+        android:layout_width="59dp"
+        android:layout_height="55dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/etPasswordLogin"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.4"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/iconCountLogin"
+        app:layout_constraintVertical_bias="0.052"
         app:srcCompat="@drawable/icon_key" />
 
     <TextView
@@ -149,13 +150,14 @@
         android:fontFamily="serif"
         android:text="@string/textWelcomeLogin"
         android:textAlignment="center"
+        android:textColor="@color/black"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/etUsernameLogin"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.48"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.915" />
 
     <ImageView
         android:id="@+id/logoAppLogin"
