--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -55,7 +55,7 @@
         android:layout_marginStart="60dp"
         android:layout_marginBottom="36dp"
         android:fontFamily="serif"
-        android:text="@string/noCountLogin"
+        android:text="@string/textNoCountLogin"
         android:textColor="@color/black"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -66,7 +66,7 @@
         android:layout_width="249dp"
         android:layout_height="48dp"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="128dp"
+        android:layout_marginTop="92dp"
         android:layout_marginEnd="24dp"
         android:fontFamily="serif"
         android:text="@string/appName"
@@ -75,9 +75,18 @@
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/logoAppLogin"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/logoAppLogin"
+        android:layout_width="122dp"
+        android:layout_height="102dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="56dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/logo" />
 
     <EditText
         android:id="@+id/etUsernameLogin"
@@ -91,7 +100,7 @@
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/etPasswordLogin"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.818"
+        app:layout_constraintHorizontal_bias="0.825"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0"
@@ -103,10 +112,10 @@
         style="@style/EditTextRounded"
         android:layout_width="279dp"
         android:layout_height="55dp"
-        android:layout_marginTop="428dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginTop="388dp"
+        android:layout_marginEnd="20dp"
         android:ems="10"
-        android:inputType="text"
+        android:inputType="textPassword"
         android:textColor="@color/black"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -157,17 +166,7 @@
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.915" />
-
-    <ImageView
-        android:id="@+id/logoAppLogin"
-        android:layout_width="122dp"
-        android:layout_height="102dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="92dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/logo" />
+        app:layout_constraintVertical_bias="0.918" />
 
     <Button
         android:id="@+id/buttonSingInLogin"
@@ -178,6 +177,7 @@
         android:fontFamily="serif"
         android:text="@string/textSignInLogin"
         android:textSize="34sp"
+        android:textColor="@color/white"
         app:strokeColor="@color/orange"
         app:strokeWidth="3dp"
         app:layout_constraintEnd_toEndOf="parent"
