Added validations for email fields

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -48,6 +48,7 @@
                         app:strokeWidth="3dp"
                         android:fontFamily="serif"
                         android:text="Cambiar foto"
+                        android:textColor="@color/white"
                     />
 
             </LinearLayout>
